# human_pose_detection

./: README.md
detection_msgs/: CMakeLists.txt  package.xml
detection_msgs/msg/: PoseMsg.msg
pose_detection/: .gitignore  package.xml  setup.cfg  setup.py
pose_detection/pose_detection/: pose_detection.py
